re PR fortran/35837 (rej.valid: Host-associated SAVEd variable and PURE function)

2008-09-05  Daniel Kraft  <d@domob.eu>

	PR fortran/35837
	* resolve.c (resolve_types): Restore gfc_current_ns on exit.
	* symbol.c (gfc_save_all): Removed blank line.

2008-09-05  Daniel Kraft  <d@domob.eu>

	PR fortran/35837
	* gfortran.dg/save_3.f90: New test.

From-SVN: r140046