gcc/fortran/resolve.c
@@ -10116,8 +10116,7 @@ resolve_types (gfc_namespace *ns)
   gfc_charlen *cl;
   gfc_data *d;
   gfc_equiv *eq;
-
-  gfc_current_ns = ns;
+  gfc_namespace* old_ns = gfc_current_ns;
 
   /* Check that all IMPLICIT types are ok.  */
   if (!ns->seen_implicit_none)
@@ -10130,6 +10129,8 @@ resolve_types (gfc_namespace *ns)
 				      NULL) == FAILURE)
 	  return;
     }
+
+  gfc_current_ns = ns;
 
   resolve_entries (ns);
 
@@ -10185,6 +10186,8 @@ resolve_types (gfc_namespace *ns)
     warn_unused_fortran_label (ns->st_labels);
 
   gfc_resolve_uops (ns->uop_root);
+
+  gfc_current_ns = old_ns;
 }
 
 
